fixed swagger 3
